# openapi-gen

./: .gitignore  Cargo.toml  README.md  example.json
src/: cli.rs  main.rs  parser.rs  sanitizer.rs  template.rs
